[tool.poetry]
name = "vicunapi"
version = "0.1.0"
description = ""
authors = ["Mark Lechner <mark.lechner@bitpanda.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
fastapi = "^0.97.0"
langchain = "^0.0.202"
pydantic = "^1.10.9"
llama-cpp-python = "^0.1.63"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
